--- a/frontend/src/components/textbox.css
+++ b/frontend/src/components/textbox.css
@@ -7,12 +7,8 @@
     padding: 10px;
     font-size: 16px;
     width: 80%;
-    max-width: 300px;
+    max-width: 1000px;
     box-sizing: border-box;
-  }
-  
-  .text-box p {
-    margin-top: 10px;
-    font-size: 18px;
-    color: #333;
+    color: #000000;
+    background-color: #D9D9D9;
   }
