--- a/frontend/src/pages/landing.css
+++ b/frontend/src/pages/landing.css
@@ -1,12 +1,16 @@
 .landing-page {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
   
-  .landing-header {
-    padding: 20px;
-    color: rgb(0, 0, 0);
-    text-align: left;
-  }
+.landing-header {
+  padding: 20px;
+  color: rgb(0, 0, 0);
+  text-align: center;
+}
+
+.landing-header h1 {
+  font-weight: 500; /* Bold */
+}
