--- a/frontend/src/components/textbox.css
+++ b/frontend/src/components/textbox.css
@@ -1,14 +1,89 @@
-.text-box {
-    margin-top: 20px;
-    text-align: center;
+:root {
+  --primary: #11998e;
+  --secondary: #38ef7d;
+  --white: #fff;
+  --gray: #9b9b9b;
+}
+
+body {
+  font-family: 'Poppins', sans-serif; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-size: 1.5rem;
+  background-color: #222222;
+}
+
+.form__group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+.label {
+  font-size: 20px;
+  color: #4a4a4a;
+  margin-bottom: 0;
+  white-space: nowrap;
+}
+
+.form__field {
+  min-width: 150px;
+  max-width: 300px;
+  padding: 5px;
+  font-size: 20px;
+  color: #4a4a4a;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  transition: border-color 0.2s;
+  resize: none;
+}
+
+.form__field::placeholder {
+  color: #4a4a4a;
+  opacity: 0.7;
+}
+
+.form__field:placeholder-shown ~ .form__label {
+  font-size: 1.3rem;
+  cursor: text;
+  top: 20px;
+}
+
+.form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: var(--gray);
+}
+
+.form__field:focus {
+  outline: none;
+  box-shadow: none;
+  border-color: #4a4a4a;
+}
+
+/* Additional rule to prevent glow effect */
+.form__field:focus-visible {
+  outline: none;
+  box-shadow: none;
+}
+
+/* reset input */
+.form__field {
+  &:required,
+  &:invalid { 
+    box-shadow: none; 
   }
-  
-  .text-box input {
-    padding: 10px;
-    font-size: 16px;
-    width: 80%;
-    max-width: 1000px;
-    box-sizing: border-box;
-    color: #000000;
-    background-color: #D9D9D9;
-  }
+}
+
+/* Override any default browser styles */
+.form__field:focus {
+  outline: 0;
+  border-color: #4a4a4a;
+}
