--- a/frontend/src/components/textbox.css
+++ b/frontend/src/components/textbox.css
@@ -20,6 +20,8 @@ body {
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
+  align-items: center;
+  margin-left: 20px;
 }
 
 .label {
@@ -40,6 +42,7 @@ body {
   box-sizing: border-box;
   transition: border-color 0.2s;
   resize: none;
+  margin-left: 15px;
 }
 
 .form__field::placeholder {
@@ -86,4 +89,19 @@ body {
 .form__field:focus {
   outline: 0;
   border-color: #4a4a4a;
+}
+
+/* Add to bottom of file */
+.cursor {
+  display: inline-block;
+  width: 2px;
+  height: 1em;
+  background-color: #4a4a4a;
+  margin-left: 2px;
+  animation: blink 1s step-end infinite;
+}
+
+@keyframes blink {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0; }
 }
