--- a/frontend/src/pages/loading_page.css
+++ b/frontend/src/pages/loading_page.css
@@ -11,25 +11,47 @@
   }
   
   .loading-container {
-    width: 200px;
-    height: 200px;
+    position: relative;
+    width: 800px;
+    height: 800px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    border-radius: 50%;
-    animation: rotate 3s linear infinite;
+    justify-content: center;
   }
   
-  .flag {
+  .loading-text {
+    font-size: 3.75rem;
+    font-weight: 300;
+    letter-spacing: 0.1em;
+    color: #808080;
     position: absolute;
-    font-size: 2rem;
+    top: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    z-index: 2;
+    width: 100%;
+    margin-top: 0;
   }
   
-  @keyframes rotate {
+  .center-globe {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    height: 500px;
+    z-index: 1;
+    animation: spin 3s linear infinite;
+  }
+  
+  @keyframes spin {
     from {
-      transform: rotate(0deg);
+      transform: translate(-50%, -50%) rotate(0deg);
     }
     to {
-      transform: rotate(360deg);
+      transform: translate(-50%, -50%) rotate(360deg);
     }
   }
